navbar and hero

--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,10 @@
+@layer base {
+  *, ::before, ::after {
+    box-sizing: border-box;
+  }
+}
 @layer components {
+  
   .primary-btn {
     @apply w-[163px] py-4 px-10 font-[700] text-base text-white  rounded-[2px] bg-[#FB2E86];
   }
