--- a/src/global.css
+++ b/src/global.css
@@ -11,6 +11,10 @@
 
   .headerUl li{
     @apply flex items-center gap-1
+
+  }
+  .icon-hover{
+    @apply text-[#1389FF] hover:text-[#2F1AC4] hover:bg-[#EEEFFB] hover:w-[30px] hover:h-[30px]  hover:drop-shadow-[4px] rounded-full hover:px-[5px] hover:py-[3px]
   }
 }
 
